changing to java 8 for deploying to heroku